feat: compose remaster with LUT grading
